Update environment variables, refactor userId type to string, and enhance session handling in workout services

--- a/gymtracker-frontend/.env.example
+++ b/gymtracker-frontend/.env.example
@@ -4,4 +4,4 @@ PORT=3001
 # Only variables prefixed with VITE_ are exposed to the client.
 # Do NOT put server secrets here.
 VITE_GEMINI_API_KEY=
-VITE_API_URL=https://localhost:3000
+VITE_API_URL=http://localhost:3000
